@@ -202,8 +202,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|automaton
-operator|.
 name|fst
 operator|.
 name|Builder
@@ -218,8 +216,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 operator|.
@@ -236,8 +232,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|automaton
-operator|.
 name|fst
 operator|.
 name|FST
@@ -253,8 +247,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|automaton
-operator|.
 name|fst
 operator|.
 name|PositiveIntOutputs
@@ -269,8 +261,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 operator|.
