@@ -1,6 +1,6 @@
 begin_unit
 begin_package
-DECL|package|org.apache.lucene.util.automaton.fst
+DECL|package|org.apache.lucene.util.fst
 package|package
 name|org
 operator|.
@@ -9,8 +9,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 package|;
@@ -67,7 +65,7 @@ name|BytesRef
 import|;
 end_import
 begin_comment
-comment|/**  * Output is a sequence of bytes, for each input term.  * @lucene.experimental  */
+comment|/**  * Output is a sequence of bytes, for each input term.  *  * @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|ByteSequenceOutputs
