@@ -1,6 +1,6 @@
 begin_unit
 begin_package
-DECL|package|org.apache.lucene.util.automaton.fst
+DECL|package|org.apache.lucene.util.fst
 package|package
 name|org
 operator|.
@@ -9,8 +9,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 package|;
@@ -89,8 +87,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|automaton
-operator|.
 name|fst
 operator|.
 name|Builder
@@ -108,7 +104,7 @@ begin_comment
 comment|// (FSTEnum, Util) have problems with this!!
 end_comment
 begin_comment
-comment|/** Represents an FST using a compact byte[] format.  *<p> The format is similar to what's used by Morfologik  *  (http://sourceforge.net/projects/morfologik).  * @lucene.experimental  */
+comment|/** Represents an FST using a compact byte[] format.  *<p> The format is similar to what's used by Morfologik  *  (http://sourceforge.net/projects/morfologik).  *  * @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|FST
