@@ -1,6 +1,6 @@
 begin_unit
 begin_package
-DECL|package|org.apache.lucene.util.automaton.fst
+DECL|package|org.apache.lucene.util.fst
 package|package
 name|org
 operator|.
@@ -9,8 +9,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 package|;
@@ -45,7 +43,7 @@ name|DataOutput
 import|;
 end_import
 begin_comment
-comment|/**  * Use this if you just want to build an FSA.  */
+comment|/**  * Use this if you just want to build an FSA.  *  * @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|NoOutputs
