@@ -1,6 +1,6 @@
 begin_unit
 begin_package
-DECL|package|org.apache.lucene.util.automaton.fst
+DECL|package|org.apache.lucene.util.fst
 package|package
 name|org
 operator|.
@@ -9,8 +9,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 package|;
@@ -54,7 +52,7 @@ name|DataOutput
 import|;
 end_import
 begin_comment
-comment|/**  * Output is a long, for each input term.  NOTE: the  * resulting FST is not guaranteed to be minimal!  See  * {@link Builder}.  You cannot store 0 output with this  * (that's reserved to mean "no output")!  * @lucene.experimental  */
+comment|/**  * Output is a long, for each input term.  NOTE: the  * resulting FST is not guaranteed to be minimal!  See  * {@link Builder}.  You cannot store 0 output with this  * (that's reserved to mean "no output")!  *  * @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|PositiveIntOutputs
