@@ -1,6 +1,6 @@
 begin_unit
 begin_package
-DECL|package|org.apache.lucene.util.automaton.fst
+DECL|package|org.apache.lucene.util.fst
 package|package
 name|org
 operator|.
@@ -9,8 +9,6 @@ operator|.
 name|lucene
 operator|.
 name|util
-operator|.
-name|automaton
 operator|.
 name|fst
 package|;
@@ -63,7 +61,7 @@ name|IntsRef
 import|;
 end_import
 begin_comment
-comment|/** Static helper methods */
+comment|/** Static helper methods  *  * @lucene.experimental */
 end_comment
 begin_class
 DECL|class|Util
